--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-13, macos-14, windows-2022]
-        features: [default, buildtime_bindgen]
+        features: [default, buildtime_bindgen, bundled]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout sources
@@ -89,11 +89,14 @@ jobs:
           echo "MYSQLCLIENT_VERSION=8.3.0" >> $GITHUB_ENV
           echo "C:\tools\mysql\current\lib" >> $GITHUB_PATH
           echo "C:\tools\mysql\current\bin" >> $GITHUB_PATH
-          echo "BINDGEN_EXTRA_CLANG_ARGS=-I./include" >> $GITHUB_ENV
-          mkdir include
-          cp ./mysql-8.3.0-winx64/include include/mysql -r
-          dir ./include/mysql
-          dir ./mysql-8.3.0-winx64/lib
+          dir "C:\tools\mysql\current\lib"
+
+      - name: Windows setup (bundled)
+        if: runner.os == 'Windows' && matrix.features == 'bundled'
+        shell: bash
+        run: |
+          echo "OPENSSL_RUST_USE_NASM=0" >> $GITHUB_ENV
+          echo OPENSSL_SRC_PERL=C:/Strawberry/perl/bin/perl >> $GITHUB_ENV
 
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -122,3 +125,12 @@ jobs:
           echo "use diesel::prelude::*;" > src/main.rs
           echo "fn main() { MysqlConnection::establish(\"foo\").unwrap(); }" >> src/main.rs
           cargo build --features "mysqlclient-sys/${{ matrix.features }}"
+
+      - name: Test all files included
+        shell: bash
+        if: matrix.features == 'bundled'
+        run: |
+          rm -rf test_diesel
+          git reset --hard HEAD
+          cd mysqlclient-src
+          cargo publish --dry-run
